04 create products table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Samazon</title>
+    <!--CSRF対策について下の行で記述されている。-->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
