--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,9 @@
   <%= link_to "Show", product %>
   <%= link_to "Edit", edit_product_path(product) %>
   <%= link_to "Delete", product_path(product), method: :delete, data: { confirm: 'Are you sure?' }  %>
+  <br>
 <% end %>
-
+<!--brタグで改行する。-->
+<br>
+<br>
 <%= link_to "New", new_product_path %>
