--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!--Font Awesomeを使用する。-->
+    <script src="https://kit.fontawesome.com/fdd87a2db4.js" crossorigin="anonymous"></script>
+
   </head>
 
   <body>
