--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,5 +22,6 @@
       <% if alert %><p class="alert alert-danger"><%= alert %></p><% end %>
       <%= yield %>
     </main>
+    <%= render partial: 'layouts/footer' %>
   </body>
 </html>
