お気に入りのエラーを解決すること

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -33,12 +33,13 @@
           <div class="row">
             <div class="col-7">
               <%= f.submit "カートに追加", class: "btn samazon-submit-button w-100" do %>
-                <i class="fas fa-shopping-cart"></i>
+              <i class="fas fa-shopping-cart"></i>
               <% end %>
             </div>
+            <!--お気に入り登録-->
             <div class="col-5">
-              <%= link_to "#", class: "btn samazon-favorite-button text-dark w-100" do %>
-                <i class="fa fa-heart"></i>お気に入り
+              <%= link_to favorite_product_path, class: "btn samazon-favorite-button text-favorite w-100" do %>
+                <i class="fa fa-heart"></i><%= current_user.likes?(@product) ? "お気に入り解除" : "お気に入り" %>
               <% end %>
             </div>
           </div>
