--- a/app/assets/stylesheets/samazon.scss
+++ b/app/assets/stylesheets/samazon.scss
@@ -171,3 +171,12 @@
 .samazon-header-shoppingcart-icon {
   color: #ffffff;
 }
+.samazon-favorite-button {
+  border-radius: 2px;
+  border: solid 1px #0fbe9f;
+  background-color: #ffffff;
+}
+
+.text-favorite {
+  color: #0fbe9f;
+}
