--- a/app/assets/stylesheets/samazon.scss
+++ b/app/assets/stylesheets/samazon.scss
@@ -171,3 +171,15 @@
 .samazon-header-shoppingcart-icon {
   color: #ffffff;
 }
+.samazon-sidebar-category-label {
+  width: 156px;
+  height: 20px;
+  font-family: YuGo;
+  font-size: 13px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #191919;
+}
