--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,16 @@
 <div class="row">
+  <div class="col-2">
+    <!--render使って、sidebarにカテゴリーを表示できるようにする。-->
+   <%= render partial: "layouts/sidebar", locals: { categories: @categories, major_category_names: @major_category_names } %>
+  </div>
   <div class="col-9">
+    <!--カテゴリーのデザインを調整-->
+  　<div class="container">
+    　 <% if @category.present? %>
+       <%= link_to "トップ", "#", category: @major_category_name %> > <%= @category.name %>
+       　<h1><%= @category.name %>の商品一覧<%= @products.count %>件</h1>
+     <% end %>
+   </div>
     <div class="container mt-4">
       <div class="row w-100">
         <% @products.each do |product|%>
