--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,11 +20,12 @@
       <ul class="navbar-nav ml-auto mr-5 mt-2">
       <!-- user_signed_in? はユーザがログインしているか調べるdeviseのHelperメソッド -->
       <% if user_signed_in? %>
-        <li class="nav-item mr-5">
-          <%= link_to "ログアウト", logout_path, onclick: "event.preventDefault(); document.getElementById('logout-form').submit();" %>
-          <%= form_with url: logout_path, style: "display: none;", method: "get", id: "logout-form" do |f| %>
-          <% end %>
-        </li>
+      
+      <li class="nav-item mr-5">
+         <%= link_to mypage_users_path, class: "nav-link" do %>
+           <i class="fas fa-user mr-1"></i><label>マイページ</label>
+         <% end %>
+      </li>
       <% else %>
         <li class="nav-item mr-5">
           <%= link_to new_user_registration_path, class: "nav-link" do %>
