--- a/app/views/shopping_carts/index.html.erb
+++ b/app/views/shopping_carts/index.html.erb
@@ -1,2 +1,103 @@
-<h1>ShoppingCarts#index</h1>
-<p>Find me in app/views/shopping_carts/index.html.erb</p>
+<div class="container d-flex justify-content-center mt-3">
+  <div class="w-75">
+    <h1>ショッピングカート</h1>
+
+    <div class="offset-8 col-4">
+      <div class="row">
+        <div class="col-6">
+          <h2>数量</h2>
+        </div>
+        <div class="col-6">
+          <h2>合計</h2>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
+      <% (0..@user_cart_items_count - 1).each do |list_number| %>
+      <div class="col-md-2 mt-2">
+          <%= image_tag "/images/dummy.png", class: "img-fuild w-100" %>
+      </div>
+      <div class="col-md-6 mt-4">
+        <h3 class="mt-4"><%= @product_names[list_number] %></h3>
+      </div>
+      <div class="col-md-2">
+        <h3 class="w-100 mt-4"><%= @user_cart_items[list_number].quantity %></h3>
+      </div>
+      <div class="col-md-2">
+        <h3 class="w-100 mt-4">￥<%= @user_cart_items[list_number].price_cents * @user_cart_items[list_number].quantity %></h3>
+      </div>
+      <% end %>
+    </div>
+
+    <hr>
+
+    <div class="offset-8 col-4">
+      <div class="row">
+        <div class="col-6">
+          <h2>合計</h2>
+        </div>
+        <div class="col-6">
+          <h2>￥<%= @total %></h2>
+        </div>
+        <div class="col-12 d-flex justify-content-end">
+          表示価格は税込みです
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div><div class="container d-flex justify-content-center mt-3">
+  <div class="w-75">
+    <h1>ショッピングカート</h1>
+
+    <div class="offset-8 col-4">
+      <div class="row">
+        <div class="col-6">
+          <h2>数量</h2>
+        </div>
+        <div class="col-6">
+          <h2>合計</h2>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
+      <% (0..@user_cart_items_count - 1).each do |list_number| %>
+      <div class="col-md-2 mt-2">
+          <%= image_tag "/images/dummy.png", class: "img-fuild w-100" %>
+      </div>
+      <div class="col-md-6 mt-4">
+        <h3 class="mt-4"><%= @product_names[list_number] %></h3>
+      </div>
+      <div class="col-md-2">
+        <h3 class="w-100 mt-4"><%= @user_cart_items[list_number].quantity %></h3>
+      </div>
+      <div class="col-md-2">
+        <h3 class="w-100 mt-4">￥<%= @user_cart_items[list_number].price_cents * @user_cart_items[list_number].quantity %></h3>
+      </div>
+      <% end %>
+    </div>
+
+    <hr>
+
+    <div class="offset-8 col-4">
+      <div class="row">
+        <div class="col-6">
+          <h2>合計</h2>
+        </div>
+        <div class="col-6">
+          <h2>￥<%= @total %></h2>
+        </div>
+        <div class="col-12 d-flex justify-content-end">
+          表示価格は税込みです
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
