--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,11 +27,13 @@
          <% end %>
       </li>
         <li class="nav-item mr-5">
+          <!--お気に入り機能-->
            <%= link_to mypage_favorite_users_path, class: "nav-link" do %>
            <i class="far fa-heart"></i>
           <% end %>
       </li>
         <li class="nav-item mr-5">
+          <!--ショッピングカート-->
             <%= link_to cart_users_path, class: "nav-link" do %>
             <i class="fas fa-shopping-cart"></i>
       <% end %>
